--- a/Shazam.ipynb
+++ b/Shazam.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "68336b7e",
+   "id": "e3cb94fc",
    "metadata": {},
    "outputs": [
     {
@@ -4384,8 +4384,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "309cb61a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La coincidencia encontrada es: /charts/top-200/world\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re \n",
+    "regex = re.compile(r'<a\\s+[^>]*href=\"([^\"]*/charts/top-200/world[^\"]*)\"[^>]*>')\n",
+    "\n",
+    "# Buscar la primera coincidencia del patrón en el contenido\n",
+    "match = regex.search(content)\n",
+    "\n",
+    "if match:\n",
+    "    unico = match.group(1)  # Obtener el primer grupo capturado como cadena\n",
+    "    print(\"La coincidencia encontrada es:\", unico)\n",
+    "else:\n",
+    "    print(\"No se encontraron coincidencias.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "01cec0df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.shazam.com/charts/top-200/world'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from urllib.parse import urljoin\n",
+    "\n",
+    "base_url = \"https://www.shazam.com\"\n",
+    "full_urls = urljoin(base_url, unico) \n",
+    "full_urls\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "10523de5",
+   "id": "f0c3aab2",
    "metadata": {},
    "outputs": [],
    "source": []
