--- a/ReporLP.ipynb
+++ b/ReporLP.ipynb
@@ -2107,6 +2107,19 @@
    "cell_type": "markdown",
    "id": "adba8b5a",
    "metadata": {},
+   "source": [
+    "\r",
+    "![youtube](youtube.png)\r\n",
+    "\n",
+    "\r\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3775b54e-5571-424a-bce7-32500ce3901e",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
