--- a/ReporLP.ipynb
+++ b/ReporLP.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "## Introducción\n",
     "\n",
-    "Este proyecto tiene como objetivo analizar las tendencias musicales en las principales plataformas de streaming de música: Spotify, iTunes y otros. Mediante el uso de las API de estas plataformas, se recopilarán datos sobre las canciones más escuchadas, artistas más populares, géneros musicales en auge y otros indicadores relevantes.\n"
+    "Este proyecto tiene como objetivo analizar las tendencias musicales en las siguientes plataformas de streaming de música: Spotify, YouTube y Shazam. Mediante el uso de las APIs y técnicas de web scraping de estas plataformas, se recopilarán datos sobre las canciones más escuchadas, artistas más populares y otros indicadores relevantes.\n"
    ]
   },
   {
@@ -2108,16 +2108,14 @@
    "id": "adba8b5a",
    "metadata": {},
    "source": [
-    "\r",
-    "![youtube](youtube.png)\r\n",
-    "\n",
+    "# Estructura Básica del Documento HTML\n",
     "\r\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3775b54e-5571-424a-bce7-32500ce3901e",
+   "id": "1cbf64d5-70bc-41fd-91c9-dcb09105d6bb",
    "metadata": {},
    "outputs": [],
    "source": []
