--- a/ReporLP.ipynb
+++ b/ReporLP.ipynb
@@ -2118,6 +2118,88 @@
    "id": "1cbf64d5-70bc-41fd-91c9-dcb09105d6bb",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "<!DOCTYPE html>\n",
+    "<html lang=\"es\">\n",
+    "<head>\n",
+    "    <meta charset=\"UTF-8\">\n",
+    "    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n",
+    "    <title>Top Canciones por Reproducción</title>\n",
+    "    <style>\n",
+    "        body {\n",
+    "            background-color: black;\n",
+    "            color: white;\n",
+    "            font-family: Arial, sans-serif;\n",
+    "            display: flex;\n",
+    "            flex-direction: column;\n",
+    "            align-items: center;\n",
+    "            justify-content: center;\n",
+    "            height: 100vh;\n",
+    "            margin: 0;\n",
+    "        }\n",
+    "\n",
+    "        header {\n",
+    "            text-align: center;\n",
+    "            margin-bottom: 20px;\n",
+    "        }\n",
+    "\n",
+    "        .logo-container {\n",
+    "            display: flex;\n",
+    "            justify-content: center;\n",
+    "            margin-top: 10px;\n",
+    "        }\n",
+    "\n",
+    "        .logo {\n",
+    "            width: 50px;\n",
+    "            height: auto;\n",
+    "            margin: 0 10px;\n",
+    "        }\n",
+    "\n",
+    "        main {\n",
+    "            text-align: center;\n",
+    "        }\n",
+    "\n",
+    "        input {\n",
+    "            padding: 10px;\n",
+    "            margin-bottom: 10px;\n",
+    "            width: 200px;\n",
+    "            text-align: center;\n",
+    "        }\n",
+    "\n",
+    "        button {\n",
+    "            padding: 10px 20px;\n",
+    "            cursor: pointer;\n",
+    "        }\n",
+    "\n",
+    "        #resultado {\n",
+    "            margin-top: 20px;\n",
+    "        }\n",
+    "    </style>\n",
+    "</head>\n",
+    "<body>\n",
+    "    <header>\n",
+    "        <div class=\"logo-container\">\n",
+    "            <img src=\"img/youtube.png\" alt=\"YouTube\" class=\"logo\">\n",
+    "            <img src=\"img/spotify.png\" alt=\"Spotify\" class=\"logo\">\n",
+    "            <img src=\"img/shazam.png\" alt=\"Shazam\" class=\"logo\">\n",
+    "        </div>\n",
+    "    </header>\n",
+    "    <main>\n",
+    "        <input type=\"number\" id=\"songIndex\" placeholder=\"Ingrese un número entero\">\n",
+    "        <button onclick=\"buscarCancion()\">Buscar</button>\n",
+    "        <div id=\"resultado\"></div>\n",
+    "    </main>\n",
+    "    <script src=\"script.js\"></script>\n",
+    "</body>\n",
+    "</html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a679ae98-51e7-4a00-a658-dcf51cfffa61",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
