--- a/ReporLP.ipynb
+++ b/ReporLP.ipynb
@@ -2104,6 +2104,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "379b6a24-6f91-43c3-a5a1-38a83f379093",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "adba8b5a",
    "metadata": {},
@@ -2204,8 +2212,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "49027da1-03dd-4569-8175-82910b281cda",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1073484753.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[3], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    function buscarCancion() {\u001b[0m\n\u001b[1;37m             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "function buscarCancion() {\n",
+    "    const songIndex = document.getElementById('songIndex').value;\n",
+    "    const resultadoDiv = document.getElementById('resultado');\n",
+    "\n",
+    "    fetch('basedatosmusicatop.csv')\n",
+    "        .then(response => response.text())\n",
+    "        .then(data => {\n",
+    "            const lines = data.split('\\n');\n",
+    "            const song = lines[songIndex - 1]; // Ajuste para la indexación basada en 1\n",
+    "\n",
+    "            if (song) {\n",
+    "                const [posicion, nombre, artista, enlaceYoutube] = song.split(',');\n",
+    "\n",
+    "                resultadoDiv.innerHTML = `\n",
+    "                    <h2>${nombre} - ${artista}</h2>\n",
+    "                    <a href=\"${enlaceYoutube}\" target=\"_blank\">Ver en YouTube</a>\n",
+    "                `;\n",
+    "            } else {\n",
+    "                resultadoDiv.innerHTML = '<p>No se encontró la canción.</p>';\n",
+    "            }\n",
+    "        })\n",
+    "        .catch(error => {\n",
+    "            console.error('Error al leer el archivo CSV:', error);\n",
+    "            resultadoDiv.innerHTML = '<p>Error al cargar los datos.</p>';\n",
+    "        });\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd1e04d7-d6b5-4c5e-b70a-b4da53db9f88",
    "metadata": {},
    "outputs": [],
    "source": []
