--- a/ReporLP.ipynb
+++ b/ReporLP.ipynb
@@ -2105,11 +2105,240 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "379b6a24-6f91-43c3-a5a1-38a83f379093",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nombre</th>\n",
+       "      <th>artista</th>\n",
+       "      <th>posicion</th>\n",
+       "      <th>fecha_subida</th>\n",
+       "      <th>fecha_lanzamiento</th>\n",
+       "      <th>reproducciones</th>\n",
+       "      <th>titulo</th>\n",
+       "      <th>canal</th>\n",
+       "      <th>fecha_publicacion</th>\n",
+       "      <th>vistas</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Panama</td>\n",
+       "      <td>GReeeN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2024-07-10</td>\n",
+       "      <td>2023-04-27</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ZEIT, DASS SICH WAS DREHT</td>\n",
+       "      <td>$OHO BANI</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2024-07-10</td>\n",
+       "      <td>2024-02-23</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>VEMPA</td>\n",
+       "      <td>FOURTY</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2024-07-10</td>\n",
+       "      <td>2024-04-19</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Wunder</td>\n",
+       "      <td>AYLIVA</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2024-07-10</td>\n",
+       "      <td>2024-04-26</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Mittelmeer</td>\n",
+       "      <td>Pashanim</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2024-07-10</td>\n",
+       "      <td>2024-06-13</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>De Vuelta</td>\n",
+       "      <td>Tiago PZK</td>\n",
+       "      <td>46</td>\n",
+       "      <td>2024-07-10</td>\n",
+       "      <td>2024-07-04</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>Un Finde | CROSSOVER #2</td>\n",
+       "      <td>Big One</td>\n",
+       "      <td>47</td>\n",
+       "      <td>2024-07-10</td>\n",
+       "      <td>2023-04-04</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>Ya No Vuelvas (Versión Cuarteto)</td>\n",
+       "      <td>Luck Ra</td>\n",
+       "      <td>48</td>\n",
+       "      <td>2024-07-10</td>\n",
+       "      <td>2024-02-02</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>Una Foto</td>\n",
+       "      <td>Mesita</td>\n",
+       "      <td>49</td>\n",
+       "      <td>2024-07-10</td>\n",
+       "      <td>2023-08-15</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>La Bachata</td>\n",
+       "      <td>Manuel Turizo</td>\n",
+       "      <td>50</td>\n",
+       "      <td>2024-07-10</td>\n",
+       "      <td>2023-03-17</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              nombre        artista  posicion fecha_subida  \\\n",
+       "0                             Panama         GReeeN         1   2024-07-10   \n",
+       "1          ZEIT, DASS SICH WAS DREHT      $OHO BANI         2   2024-07-10   \n",
+       "2                              VEMPA         FOURTY         3   2024-07-10   \n",
+       "3                             Wunder         AYLIVA         4   2024-07-10   \n",
+       "4                         Mittelmeer       Pashanim         5   2024-07-10   \n",
+       "..                               ...            ...       ...          ...   \n",
+       "95                         De Vuelta      Tiago PZK        46   2024-07-10   \n",
+       "96           Un Finde | CROSSOVER #2        Big One        47   2024-07-10   \n",
+       "97  Ya No Vuelvas (Versión Cuarteto)        Luck Ra        48   2024-07-10   \n",
+       "98                          Una Foto         Mesita        49   2024-07-10   \n",
+       "99                        La Bachata  Manuel Turizo        50   2024-07-10   \n",
+       "\n",
+       "   fecha_lanzamiento  reproducciones titulo canal fecha_publicacion  vistas  \n",
+       "0         2023-04-27            77.0    NaN   NaN               NaN     NaN  \n",
+       "1         2024-02-23            80.0    NaN   NaN               NaN     NaN  \n",
+       "2         2024-04-19            78.0    NaN   NaN               NaN     NaN  \n",
+       "3         2024-04-26            80.0    NaN   NaN               NaN     NaN  \n",
+       "4         2024-06-13            70.0    NaN   NaN               NaN     NaN  \n",
+       "..               ...             ...    ...   ...               ...     ...  \n",
+       "95        2024-07-04            66.0    NaN   NaN               NaN     NaN  \n",
+       "96        2023-04-04            75.0    NaN   NaN               NaN     NaN  \n",
+       "97        2024-02-02            67.0    NaN   NaN               NaN     NaN  \n",
+       "98        2023-08-15            71.0    NaN   NaN               NaN     NaN  \n",
+       "99        2023-03-17            85.0    NaN   NaN               NaN     NaN  \n",
+       "\n",
+       "[100 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Cargar el archivo CSV\n",
+    "file_path = 'basedatosmusicatop.csv'\n",
+    "df = pd.read_csv(file_path)\n",
+    "\n",
+    "# Mostrar los primeros 100 datos ordenados\n",
+    "primeros_100 = df.head(100)\n",
+    "\n",
+    "# Mostrar en Jupyter Notebook\n",
+    "primeros_100\n"
+   ]
   },
   {
    "cell_type": "markdown",
