--- a/ReporLP.ipynb
+++ b/ReporLP.ipynb
@@ -32,17 +32,15 @@
    "metadata": {},
    "source": [
     "## Objetivos del proyecto\n",
-    "1. Identificar las canciones y artistas más populares en cada plataforma: Se analizará el volumen de reproducciones, descargas, búsquedas y agregaciones a playlists para determinar las tendencias musicales más destacadas en cada plataforma.\n",
-    "2. Comparar las tendencias musicales entre plataformas: Se compararán los resultados obtenidos en cada plataforma para identificar similitudes, diferencias y patrones únicos en las preferencias musicales de los usuarios.\n",
-    "3. Analizar la evolución de las tendencias musicales a lo largo del tiempo: Se realizará un seguimiento de las tendencias musicales durante un período determinado para identificar cambios en las preferencias de los usuarios y la aparición de nuevos artistas o géneros.\n",
-    "4. Visualizar los resultados de manera atractiva y comprensible: Se utilizarán gráficos, tablas y otras herramientas de visualización para presentar los resultados de manera clara y accesible a una audiencia amplia.\n",
+    "1.\tIdentificar las canciones y artistas más populares en cada plataforma: Se analizará el volumen de reproducciones.\r\n",
+    "2.\tComparar las tendencias musicales entre plataformas \r\n",
+    "3.\tAnalizar la evolución de las tendencias musicales a lo largo del tiempo: Se realizará un seguimiento de las tendencias musicales durante un período determinado para identificar cambios en las preferencias de los usuarios y la aparición de nuevos artistas o géneros.\r\n",
+    "4.\tVisualizar los resultados de manera atractiva y comprensible.\r\n",
     "\n",
-    "## Producto Final:\n",
-    "1. Un resumen de las principales tendencias musicales en cada plataforma de streaming.\n",
-    "2. Una comparación detallada de las tendencias entre las diferentes plataformas.\n",
-    "3. Un análisis de la evolución de las tendencias musicales a lo largo del tiempo.\n",
-    "4. Visualizaciones atractivas que representen los datos de manera clara y concisa.\n",
-    "5. Conclusiones y recomendaciones sobre el futuro de la industria musical."
+    "\n",
+    "## Producto Fin1g.\n",
+    "2. Una comparación detallada de las tendencias entre las diferentes plataform2o.\n",
+    "4. Visualizaciones atractivas que representen los datos de manera clara y concical."
    ]
   },
   {
@@ -52,6 +50,14 @@
    "source": [
     "# Extración de información \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5c5bec6-1bb5-4d26-8a9a-a5fcbfc84871",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2873,11 +2879,237 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "3425a421-92b8-40fb-bfcb-6235ebd0739d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>artista</th>\n",
+       "      <th>posicion</th>\n",
+       "      <th>fecha_subida</th>\n",
+       "      <th>fecha_lanzamiento</th>\n",
+       "      <th>reproducciones</th>\n",
+       "      <th>titulo</th>\n",
+       "      <th>canal</th>\n",
+       "      <th>fecha_publicacion</th>\n",
+       "      <th>vistas</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>815</th>\n",
+       "      <td>Fede Vigevani</td>\n",
+       "      <td>16</td>\n",
+       "      <td>2024-07-10</td>\n",
+       "      <td>2020-04-01</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>847</th>\n",
+       "      <td>Maca Castro</td>\n",
+       "      <td>48</td>\n",
+       "      <td>2024-07-10</td>\n",
+       "      <td>2023-11-16</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>811</th>\n",
+       "      <td>Maca Castro</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2024-07-10</td>\n",
+       "      <td>2023-08-17</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>807</th>\n",
+       "      <td>Fede Vigevani</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2024-07-10</td>\n",
+       "      <td>2022-10-06</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>820</th>\n",
+       "      <td>Maca Castro</td>\n",
+       "      <td>21</td>\n",
+       "      <td>2024-07-10</td>\n",
+       "      <td>2024-03-14</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>584</th>\n",
+       "      <td>Booba</td>\n",
+       "      <td>35</td>\n",
+       "      <td>2024-07-10</td>\n",
+       "      <td>2024-02-08</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Tayna</td>\n",
+       "      <td>17</td>\n",
+       "      <td>2024-07-10</td>\n",
+       "      <td>2024-06-11</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>597</th>\n",
+       "      <td>Heuss L'enfoiré</td>\n",
+       "      <td>48</td>\n",
+       "      <td>2024-07-10</td>\n",
+       "      <td>2023-06-30</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>375</th>\n",
+       "      <td>RIIZE</td>\n",
+       "      <td>26</td>\n",
+       "      <td>2024-07-10</td>\n",
+       "      <td>2024-06-17</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>388</th>\n",
+       "      <td>TWS</td>\n",
+       "      <td>39</td>\n",
+       "      <td>2024-07-10</td>\n",
+       "      <td>2024-06-24</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             artista  posicion fecha_subida fecha_lanzamiento  reproducciones  \\\n",
+       "815    Fede Vigevani        16   2024-07-10        2020-04-01             0.0   \n",
+       "847      Maca Castro        48   2024-07-10        2023-11-16             6.0   \n",
+       "811      Maca Castro        12   2024-07-10        2023-08-17            12.0   \n",
+       "807    Fede Vigevani         8   2024-07-10        2022-10-06            18.0   \n",
+       "820      Maca Castro        21   2024-07-10        2024-03-14            23.0   \n",
+       "..               ...       ...          ...               ...             ...   \n",
+       "584            Booba        35   2024-07-10        2024-02-08            67.0   \n",
+       "16             Tayna        17   2024-07-10        2024-06-11            67.0   \n",
+       "597  Heuss L'enfoiré        48   2024-07-10        2023-06-30            67.0   \n",
+       "375            RIIZE        26   2024-07-10        2024-06-17            67.0   \n",
+       "388              TWS        39   2024-07-10        2024-06-24            67.0   \n",
+       "\n",
+       "    titulo canal fecha_publicacion  vistas  \n",
+       "815    NaN   NaN               NaN     NaN  \n",
+       "847    NaN   NaN               NaN     NaN  \n",
+       "811    NaN   NaN               NaN     NaN  \n",
+       "807    NaN   NaN               NaN     NaN  \n",
+       "820    NaN   NaN               NaN     NaN  \n",
+       "..     ...   ...               ...     ...  \n",
+       "584    NaN   NaN               NaN     NaN  \n",
+       "16     NaN   NaN               NaN     NaN  \n",
+       "597    NaN   NaN               NaN     NaN  \n",
+       "375    NaN   NaN               NaN     NaN  \n",
+       "388    NaN   NaN               NaN     NaN  \n",
+       "\n",
+       "[100 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Cargar el archivo CSV\n",
+    "file_path = 'basedatosmusicatop.csv'\n",
+    "df = pd.read_csv(file_path)\n",
+    "\n",
+    "# Filtrar y eliminar registros sin valor en la columna 'nombre'\n",
+    "df_filtrado = df[df['nombre'].notna()]\n",
+    "\n",
+    "# Ordenar por la columna 'reproducciones' en forma ascendente\n",
+    "df_ordenado = df_filtrado.sort_values(by='reproducciones', ascending=True)\n",
+    "\n",
+    "# Mostrar los primeros 100 datos ordenados por 'reproducciones'\n",
+    "primeros_100_ordenados = df_ordenado.head(100)\n",
+    "\n",
+    "# Eliminar la primera columna que crea Jupyter Notebook (índices numéricos)\n",
+    "primeros_100_ordenados = primeros_100_ordenados.drop(columns=primeros_100_ordenados.columns[0])\n",
+    "\n",
+    "# Mostrar en Jupyter Notebook\n",
+    "primeros_100_ordenados\n"
+   ]
   },
   {
    "cell_type": "markdown",
