--- a/ReporLP.ipynb
+++ b/ReporLP.ipynb
@@ -52,12 +52,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b5c5bec6-1bb5-4d26-8a9a-a5fcbfc84871",
+   "cell_type": "markdown",
+   "id": "f43cd47b-946b-4725-9995-049da283a1a0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Spotify API\n",
+    "Descripción:\n",
+    "La API de Spotify permite a los desarrolladores acceder a los datos de Spotify y controlar la reproducción en clientes de Spotify. Con esta API, se pueden crear aplicaciones que ofrecen funcionalidades como buscar música, obtener detalles de artistas, álbumes y pistas, gestionar listas de reproducción y más.  \n",
+    "### YouTube API\n",
+    "Descripción:\n",
+    "La API de YouTube permite a los desarrolladores integrar YouTube en sus aplicaciones y acceder a diversas funciones de YouTube, como buscar videos, recuperar información sobre videos, canales y listas de reproducción, gestionar contenido y controlar la reproducción de videos  \n"
+   ]
   },
   {
    "cell_type": "markdown",
