--- a/ReporLP.ipynb
+++ b/ReporLP.ipynb
@@ -61,7 +61,10 @@
     "La API de Spotify permite a los desarrolladores acceder a los datos de Spotify y controlar la reproducción en clientes de Spotify. Con esta API, se pueden crear aplicaciones que ofrecen funcionalidades como buscar música, obtener detalles de artistas, álbumes y pistas, gestionar listas de reproducción y más.  \n",
     "### YouTube API\n",
     "Descripción:\n",
-    "La API de YouTube permite a los desarrolladores integrar YouTube en sus aplicaciones y acceder a diversas funciones de YouTube, como buscar videos, recuperar información sobre videos, canales y listas de reproducción, gestionar contenido y controlar la reproducción de videos  \n"
+    "La API de YouTube permite a los desarrolladores integrar YouTube en sus aplicaciones y acceder a diversas funciones de YouTube, como buscar videos, recuperar información sobre videos, canales y listas de reproducción, gestionar contenido y controlar la reproducción de videos  \n",
+    "### Shazam Web Streaming\n",
+    "Descripción:\n",
+    "Shazam ofrece servicios de reconocimiento de música, pero no tiene una API pública para streaming o acceso a datos como Spotify o YouTube. Sin embargo, Shazam ha proporcionado integraciones con otras plataformas a través de acuerdos comerciales. Generalmente, la tecnología de Shazam se integra en aplicaciones de terceros para el reconocimiento de música."
    ]
   },
   {
@@ -2884,8 +2887,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "3425a421-92b8-40fb-bfcb-6235ebd0739d",
+   "execution_count": 1,
+   "id": "2702c0a9-73f7-4c78-868d-73e42d26e8f9",
    "metadata": {},
    "outputs": [
     {
@@ -2909,6 +2912,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>nombre</th>\n",
        "      <th>artista</th>\n",
        "      <th>posicion</th>\n",
        "      <th>fecha_subida</th>\n",
@@ -2922,7 +2926,8 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>815</th>\n",
+       "      <th>0</th>\n",
+       "      <td>Solita</td>\n",
        "      <td>Fede Vigevani</td>\n",
        "      <td>16</td>\n",
        "      <td>2024-07-10</td>\n",
@@ -2934,7 +2939,8 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>847</th>\n",
+       "      <th>1</th>\n",
+       "      <td>Tormentos</td>\n",
        "      <td>Maca Castro</td>\n",
        "      <td>48</td>\n",
        "      <td>2024-07-10</td>\n",
@@ -2946,7 +2952,8 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>811</th>\n",
+       "      <th>2</th>\n",
+       "      <td>Lo Que Nos Pasó</td>\n",
        "      <td>Maca Castro</td>\n",
        "      <td>12</td>\n",
        "      <td>2024-07-10</td>\n",
@@ -2958,7 +2965,8 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>807</th>\n",
+       "      <th>3</th>\n",
+       "      <td>Luz</td>\n",
        "      <td>Fede Vigevani</td>\n",
        "      <td>8</td>\n",
        "      <td>2024-07-10</td>\n",
@@ -2970,7 +2978,8 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>820</th>\n",
+       "      <th>4</th>\n",
+       "      <td>Gotas En Mi Piel</td>\n",
        "      <td>Maca Castro</td>\n",
        "      <td>21</td>\n",
        "      <td>2024-07-10</td>\n",
@@ -2992,9 +3001,11 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>584</th>\n",
+       "      <th>95</th>\n",
+       "      <td>Dolce Camara</td>\n",
        "      <td>Booba</td>\n",
        "      <td>35</td>\n",
        "      <td>2024-07-10</td>\n",
@@ -3006,7 +3017,8 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
+       "      <th>96</th>\n",
+       "      <td>Si Ai</td>\n",
        "      <td>Tayna</td>\n",
        "      <td>17</td>\n",
        "      <td>2024-07-10</td>\n",
@@ -3018,7 +3030,8 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>597</th>\n",
+       "      <th>97</th>\n",
+       "      <td>Saiyan</td>\n",
        "      <td>Heuss L'enfoiré</td>\n",
        "      <td>48</td>\n",
        "      <td>2024-07-10</td>\n",
@@ -3030,7 +3043,8 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>375</th>\n",
+       "      <th>98</th>\n",
+       "      <td>Boom Boom Bass</td>\n",
        "      <td>RIIZE</td>\n",
        "      <td>26</td>\n",
        "      <td>2024-07-10</td>\n",
@@ -3042,7 +3056,8 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>388</th>\n",
+       "      <th>99</th>\n",
+       "      <td>If I’m S, Can You Be My N?</td>\n",
        "      <td>TWS</td>\n",
        "      <td>39</td>\n",
        "      <td>2024-07-10</td>\n",
@@ -3055,40 +3070,40 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>100 rows × 9 columns</p>\n",
+       "<p>100 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "             artista  posicion fecha_subida fecha_lanzamiento  reproducciones  \\\n",
-       "815    Fede Vigevani        16   2024-07-10        2020-04-01             0.0   \n",
-       "847      Maca Castro        48   2024-07-10        2023-11-16             6.0   \n",
-       "811      Maca Castro        12   2024-07-10        2023-08-17            12.0   \n",
-       "807    Fede Vigevani         8   2024-07-10        2022-10-06            18.0   \n",
-       "820      Maca Castro        21   2024-07-10        2024-03-14            23.0   \n",
-       "..               ...       ...          ...               ...             ...   \n",
-       "584            Booba        35   2024-07-10        2024-02-08            67.0   \n",
-       "16             Tayna        17   2024-07-10        2024-06-11            67.0   \n",
-       "597  Heuss L'enfoiré        48   2024-07-10        2023-06-30            67.0   \n",
-       "375            RIIZE        26   2024-07-10        2024-06-17            67.0   \n",
-       "388              TWS        39   2024-07-10        2024-06-24            67.0   \n",
+       "                        nombre          artista  posicion fecha_subida  \\\n",
+       "0                       Solita    Fede Vigevani        16   2024-07-10   \n",
+       "1                    Tormentos      Maca Castro        48   2024-07-10   \n",
+       "2              Lo Que Nos Pasó      Maca Castro        12   2024-07-10   \n",
+       "3                          Luz    Fede Vigevani         8   2024-07-10   \n",
+       "4             Gotas En Mi Piel      Maca Castro        21   2024-07-10   \n",
+       "..                         ...              ...       ...          ...   \n",
+       "95                Dolce Camara            Booba        35   2024-07-10   \n",
+       "96                       Si Ai            Tayna        17   2024-07-10   \n",
+       "97                      Saiyan  Heuss L'enfoiré        48   2024-07-10   \n",
+       "98              Boom Boom Bass            RIIZE        26   2024-07-10   \n",
+       "99  If I’m S, Can You Be My N?              TWS        39   2024-07-10   \n",
        "\n",
-       "    titulo canal fecha_publicacion  vistas  \n",
-       "815    NaN   NaN               NaN     NaN  \n",
-       "847    NaN   NaN               NaN     NaN  \n",
-       "811    NaN   NaN               NaN     NaN  \n",
-       "807    NaN   NaN               NaN     NaN  \n",
-       "820    NaN   NaN               NaN     NaN  \n",
-       "..     ...   ...               ...     ...  \n",
-       "584    NaN   NaN               NaN     NaN  \n",
-       "16     NaN   NaN               NaN     NaN  \n",
-       "597    NaN   NaN               NaN     NaN  \n",
-       "375    NaN   NaN               NaN     NaN  \n",
-       "388    NaN   NaN               NaN     NaN  \n",
+       "   fecha_lanzamiento  reproducciones titulo canal fecha_publicacion  vistas  \n",
+       "0         2020-04-01             0.0    NaN   NaN               NaN     NaN  \n",
+       "1         2023-11-16             6.0    NaN   NaN               NaN     NaN  \n",
+       "2         2023-08-17            12.0    NaN   NaN               NaN     NaN  \n",
+       "3         2022-10-06            18.0    NaN   NaN               NaN     NaN  \n",
+       "4         2024-03-14            23.0    NaN   NaN               NaN     NaN  \n",
+       "..               ...             ...    ...   ...               ...     ...  \n",
+       "95        2024-02-08            67.0    NaN   NaN               NaN     NaN  \n",
+       "96        2024-06-11            67.0    NaN   NaN               NaN     NaN  \n",
+       "97        2023-06-30            67.0    NaN   NaN               NaN     NaN  \n",
+       "98        2024-06-17            67.0    NaN   NaN               NaN     NaN  \n",
+       "99        2024-06-24            67.0    NaN   NaN               NaN     NaN  \n",
        "\n",
-       "[100 rows x 9 columns]"
+       "[100 rows x 10 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3109,8 +3124,8 @@
     "# Mostrar los primeros 100 datos ordenados por 'reproducciones'\n",
     "primeros_100_ordenados = df_ordenado.head(100)\n",
     "\n",
-    "# Eliminar la primera columna que crea Jupyter Notebook (índices numéricos)\n",
-    "primeros_100_ordenados = primeros_100_ordenados.drop(columns=primeros_100_ordenados.columns[0])\n",
+    "# Resetear el índice y eliminar la columna de índice original\n",
+    "primeros_100_ordenados = primeros_100_ordenados.reset_index(drop=True)\n",
     "\n",
     "# Mostrar en Jupyter Notebook\n",
     "primeros_100_ordenados\n"
