--- a/ReporLP.ipynb
+++ b/ReporLP.ipynb
@@ -3132,6 +3132,252 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "eac2e160-3143-4679-be4c-91720c502d8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nombre</th>\n",
+       "      <th>artista</th>\n",
+       "      <th>posicion</th>\n",
+       "      <th>fecha_subida</th>\n",
+       "      <th>fecha_lanzamiento</th>\n",
+       "      <th>reproducciones</th>\n",
+       "      <th>titulo</th>\n",
+       "      <th>canal</th>\n",
+       "      <th>fecha_publicacion</th>\n",
+       "      <th>vistas</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Espresso</td>\n",
+       "      <td>Sabrina Carpenter</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2024-07-10</td>\n",
+       "      <td>2024-04-12</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Espresso</td>\n",
+       "      <td>Sabrina Carpenter</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2024-07-10</td>\n",
+       "      <td>2024-04-12</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Espresso</td>\n",
+       "      <td>Sabrina Carpenter</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2024-07-10</td>\n",
+       "      <td>2024-04-12</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Espresso</td>\n",
+       "      <td>Sabrina Carpenter</td>\n",
+       "      <td>45</td>\n",
+       "      <td>2024-07-10</td>\n",
+       "      <td>2024-04-12</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Espresso</td>\n",
+       "      <td>Sabrina Carpenter</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2024-07-10</td>\n",
+       "      <td>2024-04-12</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>Stargazing</td>\n",
+       "      <td>Myles Smith</td>\n",
+       "      <td>14</td>\n",
+       "      <td>2024-07-10</td>\n",
+       "      <td>2024-05-10</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>As It Was</td>\n",
+       "      <td>Harry Styles</td>\n",
+       "      <td>44</td>\n",
+       "      <td>2024-07-10</td>\n",
+       "      <td>2022-05-20</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>BAND4BAND (feat. Lil Baby)</td>\n",
+       "      <td>Central Cee</td>\n",
+       "      <td>29</td>\n",
+       "      <td>2024-07-10</td>\n",
+       "      <td>2024-05-23</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>Fortnight (feat. Post Malone)</td>\n",
+       "      <td>Taylor Swift</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2024-07-10</td>\n",
+       "      <td>2024-04-18</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>Fortnight (feat. Post Malone)</td>\n",
+       "      <td>Taylor Swift</td>\n",
+       "      <td>16</td>\n",
+       "      <td>2024-07-10</td>\n",
+       "      <td>2024-04-18</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           nombre            artista  posicion fecha_subida  \\\n",
+       "0                        Espresso  Sabrina Carpenter        31   2024-07-10   \n",
+       "1                        Espresso  Sabrina Carpenter        11   2024-07-10   \n",
+       "2                        Espresso  Sabrina Carpenter         1   2024-07-10   \n",
+       "3                        Espresso  Sabrina Carpenter        45   2024-07-10   \n",
+       "4                        Espresso  Sabrina Carpenter         4   2024-07-10   \n",
+       "..                            ...                ...       ...          ...   \n",
+       "95                     Stargazing        Myles Smith        14   2024-07-10   \n",
+       "96                      As It Was       Harry Styles        44   2024-07-10   \n",
+       "97     BAND4BAND (feat. Lil Baby)        Central Cee        29   2024-07-10   \n",
+       "98  Fortnight (feat. Post Malone)       Taylor Swift        20   2024-07-10   \n",
+       "99  Fortnight (feat. Post Malone)       Taylor Swift        16   2024-07-10   \n",
+       "\n",
+       "   fecha_lanzamiento  reproducciones titulo canal fecha_publicacion  vistas  \n",
+       "0         2024-04-12            99.0    NaN   NaN               NaN     NaN  \n",
+       "1         2024-04-12            99.0    NaN   NaN               NaN     NaN  \n",
+       "2         2024-04-12            99.0    NaN   NaN               NaN     NaN  \n",
+       "3         2024-04-12            99.0    NaN   NaN               NaN     NaN  \n",
+       "4         2024-04-12            99.0    NaN   NaN               NaN     NaN  \n",
+       "..               ...             ...    ...   ...               ...     ...  \n",
+       "95        2024-05-10            92.0    NaN   NaN               NaN     NaN  \n",
+       "96        2022-05-20            91.0    NaN   NaN               NaN     NaN  \n",
+       "97        2024-05-23            91.0    NaN   NaN               NaN     NaN  \n",
+       "98        2024-04-18            91.0    NaN   NaN               NaN     NaN  \n",
+       "99        2024-04-18            91.0    NaN   NaN               NaN     NaN  \n",
+       "\n",
+       "[100 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Cargar el archivo CSV\n",
+    "file_path = 'basedatosmusicatop.csv'\n",
+    "df = pd.read_csv(file_path)\n",
+    "\n",
+    "# Filtrar y eliminar registros sin valor en la columna 'nombre'\n",
+    "df_filtrado = df[df['nombre'].notna()]\n",
+    "\n",
+    "# Ordenar por la columna 'reproducciones' en forma descendente\n",
+    "df_ordenado = df_filtrado.sort_values(by='reproducciones', ascending=False)\n",
+    "\n",
+    "# Mostrar los primeros 100 datos ordenados por 'reproducciones'\n",
+    "primeros_100_ordenados = df_ordenado.head(100)\n",
+    "\n",
+    "# Resetear el índice y eliminar la columna de índice original\n",
+    "primeros_100_ordenados = primeros_100_ordenados.reset_index(drop=True)\n",
+    "\n",
+    "# Mostrar en Jupyter Notebook\n",
+    "primeros_100_ordenados\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "adba8b5a",
    "metadata": {},
