--- a/ReporLP.ipynb
+++ b/ReporLP.ipynb
@@ -1244,7 +1244,9 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "bbc1296d",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
